freshcells/templates/ingress-amazon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshcells-redirect-amazon
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/temporal-redirect: "https://www.amazon.com"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshcells
                port:
                  number: 8080
