freshcells/templates/ingress-freshcells.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshcells-redirect-freshcells
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.freshcells.de"
spec:
  rules:
    - http:
        paths:
          - path: /freshcells
            pathType: Prefix
            backend:
              service:
                name: freshcells
                port:
                  number: 8080
